# akinator.py

./: .gitignore  .readthedocs.yml  Cargo.toml  LICENSE  README.md  akinator.pyi  pyproject.toml
.github/workflows/: ci.yml
docs/: akinator.rst  conf.py  examples.rst  index.rst
src/: async_akinator.rs  blocking_akinator.rs  enums.rs  error.rs  lib.rs  models.rs
tests/: test_async.py  test_sync.py
