[project]
name = "akinator"
author = "Tom-the-Bomb"
version = "0.1.0"
license = { file = "LICENSE" }
description = "Python bindings for akinator-rs"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/Tom-the-Bomb/akinator.py"
repository = "https://github.com/Tom-the-Bomb/akinator.py"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"